--- a/DesktopFiles/AndroidMessages.desktop
+++ b/DesktopFiles/AndroidMessages.desktop
@@ -7,4 +7,4 @@ Type=Application
 Name=Android Messages
 Exec=/opt/'Android Messages'/android-messages-desktop
 Icon=/usr/share/icons/AndroidMessages.png
-Name[en_CA]=AndroidMessages.desktop
+Name[en_CA]=AndroidMessages
