--- a/DesktopFiles/appimagekit-bitwarden.desktop
+++ b/DesktopFiles/appimagekit-bitwarden.desktop
@@ -4,7 +4,7 @@ Comment=A secure and free password manager for all of your devices.
 Exec="/opt/bitwarden/bitwarden.appimage" %U
 Terminal=false
 Type=Application
-Icon=appimagekit-bitwarden
+Icon=/usr/share/icons/Bitwarden.png
 StartupWMClass=Bitwarden
 Categories=Utility;
 X-AppImage-BuildId=1IN24goKEzaFoO2SuKIV1Mfz2MM
